# NativeVsApp

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/gr/george/axd/ndkversusapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  sha256.c  sha256.h
app/src/main/java/gr/george/axd/ndkversusapp/: Computation.kt  CryptoBenchmark.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/gr/george/axd/ndkversusapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
